@@ -7,6 +7,8 @@ Version 0.11
 
 - Added "Visual Studio" style.
 
+- Added ActionScript 3 lexer.
+
 
 Version 0.10
 ------------
